--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
         <div class="content-wrap">
         <h2>Film-lover?</h2>
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
-          <button class="button1">
-            <a href="films.html">Explore our films</a>
-          </button>
+            <a href="films.html" class="button1">Explore our films</a>
         </div>
       </section>
 
@@ -65,8 +63,7 @@
         <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
         <h4>Are you a producer?</h4>
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
-         <button class="button2">
-         <a href="create-account.html">Create an account</a>
+         <a href="create-account.html" class="button2">Create an account</a>
         </button> 
         </div>
       </section>
