--- a/films.html
+++ b/films.html
@@ -19,16 +19,17 @@
          <a href="search.html"><i class="fas fa-search"></i></a>
        </ul>
       </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="films.html" class="active">Films</a></li>
-          <li><a href="producers.html">Producers</a></li>
-        </ul>
-      </nav>
     </header>
    
     <main>
+        <nav class="navbar">
+            <ul style="margin-left: 59px;">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="films.html" class="active">Films</a></li>
+              <li><a href="producers.html">Producers</a></li>
+            </ul>
+         </nav>
+
       <section>
         <h1>Independent Films</h1>
         <p>Choose from a variety of high quality films</p>
