--- a/producers.html
+++ b/producers.html
@@ -29,16 +29,16 @@
         <a href="search.html"><i class="fas fa-search"></i></a>
       </nav>
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"/></a>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="films.html">Films</a></li>
-          <li><a href="producers.html" class="active">Producers</a></li>
-        </ul>
-      </nav>
     </header>
 
     <main>
+          <nav class="navbar">
+              <ul style="margin-left: 59px;">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="films.html">Films</a></li>
+                <li><a href="producers.html" class="active">Producers</a></li>
+              </ul>
+         </nav>
       <section>
         <div class="content-wrap">
           <h1>Producers</h1>
