--- a/producers.html
+++ b/producers.html
@@ -24,11 +24,13 @@
 
   <body>
     <header>
-      <nav class="right-menu">
+      <div class="content-wrap">
+      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"/></a>
+       <nav class="right-nav">
         <a href="login.html">Sign in</a>
         <a href="search.html"><i class="fas fa-search"></i></a>
       </nav>
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"/></a>
+    </div>
     </header>
 
     <main>
