--- a/films.html
+++ b/films.html
@@ -12,6 +12,7 @@
  
   <body>
     <header>
+     <div class="content-wrap">
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
       <div class="right-nav">
         <ul>
@@ -19,6 +20,7 @@
          <a href="search.html"><i class="fas fa-search"></i></a>
        </ul>
       </div>
+     </div>
     </header>
    
     <main>
