--- a/films.html
+++ b/films.html
@@ -12,18 +12,15 @@
  
   <body>
     <header>
-     <div class="content-wrap">
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
-      <div class="right-nav">
-        <ul>
-         <a href="login.html">Sign in</a>
-         <a href="search.html"><i class="fas fa-search"></i></a>
-       </ul>
+      <div class="content-wrap">
+        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
+          <nav class="right-nav">
+           <ul>
+            <a href="login.html">Sign in</a>
+            <a href="search.html"><i class="fas fa-search"></i></a>
+          </ul>
+          </nav>
       </div>
-     </div>
-    </header>
-   
-    <main>
         <nav class="navbar">
             <ul style="margin-left: 59px;">
               <li><a href="index.html">Home</a></li>
@@ -31,7 +28,10 @@
               <li><a href="producers.html">Producers</a></li>
             </ul>
          </nav>
-
+    </header>
+   
+   
+       <main>
       <section>
         <h1>Independent Films</h1>
         <p>Choose from a variety of high quality films</p>
