--- a/producers.html
+++ b/producers.html
@@ -25,12 +25,14 @@
   <body>
     <header>
       <div class="content-wrap">
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"/></a>
-       <nav class="right-nav">
-        <a href="login.html">Sign in</a>
-        <a href="search.html"><i class="fas fa-search"></i></a>
-      </nav>
-    </div>
+        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
+          <nav class="right-nav">
+           <ul>
+            <a href="login.html">Sign in</a>
+            <a href="search.html"><i class="fas fa-search"></i></a>
+          </ul>
+          </nav>
+      </div>
  </header>
 
     <main>
