--- a/films.html
+++ b/films.html
@@ -47,7 +47,7 @@
       </section>
 
       <div class="content-wrap">
-      <h2>Drama</h2>
+      <h2 class="films-h2">Drama</h2>
       <section class="drama">        
         <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -57,7 +57,7 @@
       </div>
 
       <div class="content-wrap">
-      <h2>Dokumentary</h2>
+      <h2 class="films-h2">Dokumentary</h2>
       <section class="documentary">        
         <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -67,7 +67,7 @@
       </div>
        
       <div class="content-wrap">
-      <h2>Action</h2>
+      <h2 class="films-h2">Action</h2>
       <section class="action">   
           <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
