--- a/films.html
+++ b/films.html
@@ -34,7 +34,7 @@
          </nav>
       <section>
         <h1>Independent Films</h1>
-        <p>Choose from a variety of high quality films</p>
+        <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
      
       <section>
