--- a/films.html
+++ b/films.html
@@ -23,8 +23,7 @@
       </div>
     </header>
    
-   
-       <main>
+   <main>
         <nav class="navbar">
             <ul style="margin-left: 59px;">
               <li><a href="index.html">Home</a></li>
@@ -40,6 +39,15 @@
       <section>
         <div class="content-wrap">
           <h2>New Releases</h2>
+          <div class="slideshow">
+            <figure>
+              <img src="images/film1-big.jpg" alt="Pic1">
+              <img src="images/film3-big.jpg" alt="Pic2">
+              <img src="images/film7-big.jpg" alt="Pic3">
+              <img src="images/film1-big.jpg" alt="Pic1">
+            </figure>
+          </div>
+          
           <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
         </div>
       </section>
