--- a/films.html
+++ b/films.html
@@ -31,7 +31,8 @@
               <li><a href="producers.html">Producers</a></li>
             </ul>
          </nav>
-      <section>
+      
+       <section class="heading-content">
         <h1>Independent Films</h1>
         <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
