--- a/films.html
+++ b/films.html
@@ -37,7 +37,7 @@
         <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
      
-      <section>
+      <section class="new-releases">
         <div class="content-wrap">
           <h2>New Releases</h2>
           <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
