--- a/films.html
+++ b/films.html
@@ -37,6 +37,7 @@
         <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
      
+      <div class="films-container">
       <section class="new-releases">
         <div class="content-wrap">
           <h2>New Releases</h2>
@@ -73,6 +74,7 @@
           <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
       </section>
      </div>
+      </div>
     </main>
 
     <footer>
