--- a/films.html
+++ b/films.html
@@ -37,15 +37,14 @@
         <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
      
-      <div class="films-container">
       <section class="new-releases">
-        <div class="content-wrap">
+        <div class="content-wrap2">
           <h2>New Releases</h2>
           <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
         </div>
       </section>
 
-      <div class="content-wrap">
+      <div class="content-wrap2">
       <h2 class="films-h2">Drama</h2>
       <section class="drama">        
         <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -55,7 +54,7 @@
       </section>
       </div>
 
-      <div class="content-wrap">
+      <div class="content-wrap2">
       <h2 class="films-h2">Dokumentary</h2>
       <section class="documentary">        
         <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -65,7 +64,7 @@
       </section>
       </div>
        
-      <div class="content-wrap">
+      <div class="content-wrap2">
       <h2 class="films-h2">Action</h2>
       <section class="action">   
           <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -73,7 +72,6 @@
           <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
       </section>
-     </div>
       </div>
     </main>
 
