--- a/films.html
+++ b/films.html
@@ -38,13 +38,13 @@
       </section>
      
       <section class="new-releases">
-        <div class="content-wrap2">
+        <div class="content-wrap">
           <h2>New Releases</h2>
           <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
         </div>
       </section>
 
-      <div class="content-wrap2">
+      <div class="content-wrap">
       <h2 class="films-h2">Drama</h2>
       <section class="drama">        
         <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -54,7 +54,7 @@
       </section>
       </div>
 
-      <div class="content-wrap2">
+      <div class="content-wrap">
       <h2 class="films-h2">Dokumentary</h2>
       <section class="documentary">        
         <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
@@ -64,7 +64,7 @@
       </section>
       </div>
        
-      <div class="content-wrap2">
+      <div class="content-wrap">
       <h2 class="films-h2">Action</h2>
       <section class="action">   
           <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
