--- a/films.html
+++ b/films.html
@@ -40,7 +40,9 @@
       <section class="new-releases">
         <div class="content-wrap">
           <h2>New Releases</h2>
+          <i class="fas fa-chevron-left"></i>
           <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
+          <i class="fas fa-chevron-right"></i>
         </div>
       </section>
 
