--- a/films.html
+++ b/films.html
@@ -37,10 +37,10 @@
         <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
      
-      <section class="new-releases">
+
         <div class="content-wrap">
-          <h2>New Releases</h2>
-          <i class="fas fa-chevron-left"></i>
+          <h2 class="films-h2">New Releases</h2>
+          <i class="fas fa-chevron-left"style="font-size: 110px;color: #A27201;"></i>
           <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
           <i class="fas fa-chevron-right"></i>
         </div>
