--- a/films.html
+++ b/films.html
@@ -40,8 +40,7 @@
 
         <div class="content-wrap">
           <h2 class="films-h2">New Releases</h2>
-          <i class="fas fa-chevron-left"style="font-size: 110px;color: #A27201;"></i>
-          <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
+          <i class="fas fa-chevron-left"style="font-size: 110px;color: #A27201;"></i><a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
           <i class="fas fa-chevron-right"></i>
         </div>
       </section>
