--- a/producers.html
+++ b/producers.html
@@ -46,12 +46,14 @@
          <section>
         <div class="content-wrap">
           <h1>Producers</h1>
-          <p>
+          <p class="h1-subtext">
             Explore independent producers and watch their high quality films
           </p>
-          <p>Are you are producer yourself?</p>
-          <a href="create-account.html">Join us now!</a>
+          <div class="h1-subtext2">
+          <p class="small-paragraph">Are you are producer yourself?</p>
+          <a href="create-account.html" class="hydralink">Join us now!</a>
         </div>
+      </div>
       </section>
 
       <section>
