--- a/producers.html
+++ b/producers.html
@@ -50,8 +50,7 @@
             Explore independent producers and watch their high quality films
           </p>
           <div class="h1-subtext2">
-          <p class="small-paragraph">Are you are producer yourself?</p>
-          <a href="create-account.html" class="hydralink">Join us now!</a>
+          <p class="small-paragraph">Are you are producer yourself?</p><a href="create-account.html" class="hydralink">Join us now!</a>
         </div>
       </div>
       </section>
