--- a/producers.html
+++ b/producers.html
@@ -43,7 +43,7 @@
       <li><a href="producers.html" class="active">Producers</a></li>
     </ul>
   </nav>
-         <section>
+         <section class="heading-content">
         <div class="content-wrap">
           <h1>Producers</h1>
           <p class="h1-subtext">
