--- a/producers.html
+++ b/producers.html
@@ -54,7 +54,8 @@
         </div>
       </div>
       </section>
-
+    
+      <div class="grid-content"></div>
       <section>
         <div class="content-wrap">
           <img src="images/producer1.jpg" class="producer"/>
@@ -73,14 +74,13 @@
       </section>
 
       <section>
+
+      <section>
         <div class="content-wrap">
           <img src="images/producer2.jpg" class="producer"/>
-      </section>
-      <section>
           <div class="producer-col">
             <h2>Name Surename</h2>
-            <p>
-              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut
               perspiciatis unde omnis iste natus error sit voluptartem
               accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
               quae ab illo inventore veritatis et quasi ropeior architecto
@@ -96,8 +96,7 @@
           <img src="images/producer3.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
-            <p>
-              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut
               perspiciatis unde omnis iste natus error sit voluptartem
               accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
               quae ab illo inventore veritatis et quasi ropeior architecto
@@ -113,8 +112,7 @@
           <img src="images/producer4.jpg" class="producer"/>
           <div class producer-col>
             <h2>Name Surename</h2>
-            <p>
-              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut
               perspiciatis unde omnis iste natus error sit voluptartem
               accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
               quae ab illo inventore veritatis et quasi ropeior architecto
@@ -124,6 +122,7 @@
           </div>
         </div>
       </section>
+    </div>
     </main>
 
     <footer></footer>
