--- a/producers.html
+++ b/producers.html
@@ -108,7 +108,7 @@
       <section>
         <div class="content-wrap">
           <img src="images/producer4.jpg" class="producer"/>
-          <div class producer-col>
+          <div class= "producer-col">
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut
               perspiciatis unde omnis iste natus error sit voluptartem
