--- a/search.html
+++ b/search.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>SquareEyes | Sign in</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/pop-up.css" rel="stylesheet">
+    <meta
+      name="description"
+      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles/pop-up.css" rel="stylesheet" />
   </head>
 
   <body>
-    <header>
+    <div class="popup-section">
+      <header>
         <i class="fas fa-chevron-left"></i>
-    </header>
+      </header>
 
-    <main>
+      <main>
         <section>
-            <h1>Search</h1>
-             <input type="text" name="search">
-             <p>Type in film title, producer, tags or category </p>
-          </section>
-
-    </main>
-
-    <footer>
-
-    </footer>
+          <h1>Search</h1>
+          <input type="text" name="search" />
+          <p>Type in film title, producer, tags or category</p>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
