--- a/search.html
+++ b/search.html
@@ -31,7 +31,10 @@
       <main>
         <section>
           <h1>Search</h1>
-          <input type="text" name="search" />
+          <input type="text" name="search" class="search-input" /><a
+            href="search-results.html"
+            ><i class="fas fa-search"></i
+          ></a>
           <p>Type in film title, producer, tags or category</p>
         </section>
       </main>
