--- a/search.html
+++ b/search.html
@@ -31,10 +31,13 @@
       <main>
         <section>
           <h1>Search</h1>
-          <input type="text" name="search" class="search-input" /><a
-            href="search-results.html"
-            ><i class="fas fa-search"></i
-          ></a>
+          <input
+            type="text"
+            placeholder="Search.."
+            name="search"
+            class="search-input"
+          /><button type="submit"><i class="fas fa-search"></i>></button>
+          <a href="search-results.html"><i class="fas fa-search"></i></a>
           <p>Type in film title, producer, tags or category</p>
         </section>
       </main>
