--- a/search.html
+++ b/search.html
@@ -36,8 +36,7 @@
             placeholder="Search.."
             name="search"
             class="search-input"
-          /><button type="submit"><i class="fas fa-search"></i>></button>
-          <a href="search-results.html"><i class="fas fa-search"></i></a>
+          /><button type="submit"><i class="fas fa-search"></i></button>
           <p>Type in film title, producer, tags or category</p>
         </section>
       </main>
