--- a/search.html
+++ b/search.html
@@ -31,12 +31,16 @@
       <main>
         <section>
           <h1>Search</h1>
-          <input
-            type="text"
-            placeholder="Search.."
-            name="search"
-            class="search-input"
-          /><button type="submit"><i class="fas fa-search"></i></button>
+          <form action="" class="form-section">
+            <input
+              type="text"
+              placeholder="Search.."
+              name="search"
+              class="search-input"
+            /><button type="submit">
+              <i class="fas fa-search" style="font-size: 28px"></i>
+            </button>
+          </form>
           <p>Type in film title, producer, tags or category</p>
         </section>
       </main>
