--- a/search.html
+++ b/search.html
@@ -38,14 +38,13 @@
           <form action="" class="form-section">
             <input
               type="text"
-              placeholder="Search.."
+              placeholder="Type in film title, producer, tags or category.."
               name="search"
               class="search-input"
             /><button type="submit">
               <i class="fas fa-search" style="font-size: 28px"></i>
             </button>
           </form>
-          <p>Type in film title, producer, tags or category</p>
         </section>
       </main>
     </div>
