--- a/search.html
+++ b/search.html
@@ -38,13 +38,14 @@
           <form action="" class="form-section">
             <input
               type="text"
-              placeholder="Type in film title, producer, tags or category.."
+              placeholder="Search.."
               name="search"
               class="search-input"
             /><button type="submit">
               <i class="fas fa-search" style="font-size: 28px"></i>
             </button>
           </form>
+          <p>Type in film title, producer, tags or category..</p>
         </section>
       </main>
     </div>
