--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
   <body>
     <div class="popup-section">
       <header>
-        <i class="fas fa-chevron-left"></i>
+        <a href="index.html"></a><i class="fas fa-chevron-left"style="font-size: 110px"></i></a>
       </header>
 
       <main>
