--- a/search.html
+++ b/search.html
@@ -26,10 +26,12 @@
     <link href="styles/pop-up.css" rel="stylesheet" />
   </head>
 
-  <body> 
-      <a href="index.html"></a><i class="fas fa-chevron-left"style="font-size: 110px"></i></a>
-    
-      <div class="popup-section">
+  <body>
+    <a href="index.html"
+      ><i class="fas fa-chevron-left" style="font-size: 30px"></i
+    ></a>
+
+    <div class="popup-section">
       <main>
         <section>
           <h1>Search</h1>
