--- a/login.html
+++ b/login.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>SquareEyes | Sign in</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/pop-up.css" rel="stylesheet">
+    <meta
+      name="description"
+      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles/pop-up.css" rel="stylesheet" />
   </head>
 
   <body>
-    <header>
-        <i class="fas fa-chevron-left"></i>
-    </header>
+    <a href="index.html"
+      ><i class="fas fa-chevron-left" style="font-size: 30px"></i
+    ></a>
 
-    <main>
+    <div class="popup-section">
+      <main>
         <section>
-            <h1>Sign in</h1>
-          </section>
-
-          <section>
-             <p>E-mail:</p>
-             <input type="text" name="E-mail">
-          </section>
-
-          <section>
-             <p>Password:</p>
-             <input type="text" name="Password">
-          </section>
-
-          <input type="submit" value="Sign in">
-            <p>Not a member?</p>
-            <p>Create an account</p>
-            <a href="create-account.html">here</a>
-    </main>
-
-    <footer>
-
-    </footer>
+          <h1>Sign in</h1>      
+        <form action="submit.php" method="GET">
+        <fieldset>
+            <legend>Sign in</legend>
+            <label for="e-mail">E-mail:</label>
+            <input type="text" name="e-mail" class="login-input" required>
+            <label for="password">Password</label>
+            <input type="text" name="password" class="login-input" required>
+         </fieldset>
+            <input type="submit" value="Sign in" class="button-1">
+        </form>
+        <p>Not a member?</p>
+        <p>Create an account</p>
+        <a href="create-account.html">here</a>
+      </main>
+    </div>
+  </body>
 </html>
