--- a/search.html
+++ b/search.html
@@ -35,7 +35,7 @@
       <main>
         <section>
           <h1>Search</h1>
-          <form action="" class="form-section">
+          <form action="submit.php" method="GET" class="form-section">
             <input
               type="text"
               placeholder="Search.."
