--- a/login.html
+++ b/login.html
@@ -36,12 +36,11 @@
         <section>
           <h1>Sign in</h1>      
         <form action="submit.php" method="GET">
-        <fieldset>
-            <legend>Sign in</legend>
+        <fieldset class="login-fieldset">
             <label for="e-mail">E-mail:</label>
-            <input type="text" name="e-mail" class="login-input" required>
+            <input type="text" name="e-mail" required>
             <label for="password">Password</label>
-            <input type="text" name="password" class="login-input" required>
+            <input type="text" name="password" required>
          </fieldset>
             <input type="submit" value="Sign in" class="button-1">
         </form>
