--- a/login.html
+++ b/login.html
@@ -38,9 +38,9 @@
         <form action="submit.php" method="GET">
         <fieldset class="login-fieldset">
             <label for="e-mail">E-mail:</label>
-            <input type="text" name="e-mail" required>
+            <input type="text" name="e-mail" class="login-input" required>
             <label for="password">Password</label>
-            <input type="text" name="password" required>
+            <input type="text" name="password" class="login-input" required>
          </fieldset>
             <input type="submit" value="Sign in" class="button1">
         </form>
