--- a/login.html
+++ b/login.html
@@ -44,6 +44,7 @@
          </fieldset>
             <input type="submit" value="Sign in" class="button1">
         </form>
+        <section class="not-a-member"
         <p>Not a member?</p>
         <p>Create an account<a href="create-account.html">here</a></p>
       </main>
