--- a/login.html
+++ b/login.html
@@ -47,6 +47,7 @@
         <section class="not-a-member"
         <p>Not a member?</p>
         <p>Create an account<a href="create-account.html">here</a></p>
+        </section>
       </main>
     </div>
   </body>
