--- a/login.html
+++ b/login.html
@@ -46,8 +46,8 @@
         </form>
         <section class="not-a-member">
         <p>Not a member?</p>
-        <p>Create an account<a href="create-account.html">here</a></p>
-        </section>
+        <p>Create an account</p><a href="create-account.html">here</a></section>
+        
       </main>
     </div>
   </body>
