--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
         </form>
         <section class="not-a-member">
         <p>Not a member?</p>
-        <p>Create an account</p><a href="create-account.html">here</a></section>
+        <p>Create an account</p></section><a href="create-account.html">here</a>
         
       </main>
     </div>
