--- a/login.html
+++ b/login.html
@@ -44,10 +44,8 @@
          </fieldset>
             <input type="submit" value="Sign in" class="button1">
         </form>
-        <section class="not-a-member">
         <p>Not a member?</p>
-        <p>Create an account</p></section><a href="create-account.html">here</a>
-        
+        <p>Create an account</p><a href="create-account.html">here</a>
       </main>
     </div>
   </body>
