--- a/producers.html
+++ b/producers.html
@@ -56,7 +56,7 @@
       </div>
       </section>
     
-      <div class="grid-content"></div>
+      <div class="flex-content"></div>
       <section>
         <div class="content-wrap">
           <img src="images/producer1.jpg" class="producer"/>
