--- a/producers.html
+++ b/producers.html
@@ -56,7 +56,7 @@
       </div>
       </section>
     
-      <div class="flex-content"></div>
+      <div class="flex-content">
       <section>
         <div class="content-wrap">
           <img src="images/producer1.jpg" class="producer"/>
@@ -121,6 +121,7 @@
           </div>
         </div>
       </section>
+      </div>
     </div>
     </main>
 
