--- a/producers.html
+++ b/producers.html
@@ -56,8 +56,7 @@
       </div>
       </section>
     
-      <div class="flex-content">
-      <section>
+      <section class="flex-content">
         <div class="content-wrap">
           <img src="images/producer1.jpg" class="producer"/>
           <div class="producer-col">
@@ -74,7 +73,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="flex-content">
         <div class="content-wrap">
           <img src="images/producer2.jpg" class="producer"/>
           <div class="producer-col">
@@ -90,7 +89,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="flex-content">
         <div class="content-wrap">
           <img src="images/producer3.jpg" class="producer"/>
           <div class="producer-col">
@@ -106,7 +105,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="flex-content">
         <div class="content-wrap">
           <img src="images/producer4.jpg" class="producer"/>
           <div class= "producer-col">
