--- a/producers.html
+++ b/producers.html
@@ -55,8 +55,9 @@
         </div>
       </div>
       </section>
-    
-      <section class="flex-content">
+   
+      <div class="flex-content">
+      <section>
           <img src="images/producer1.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -71,7 +72,7 @@
         </div>
       </section>
 
-      <section class="flex-content">
+      <section>
           <img src="images/producer2.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -113,6 +114,7 @@
         </div>
       </section>
       </div>
+    </div>
     </div>
     </main>
 
