--- a/producers.html
+++ b/producers.html
@@ -56,8 +56,7 @@
       </div>
       </section>
    
-      <div class="flex-content">
-      <section>
+      <section class="flex-content">
           <img src="images/producer1.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -72,7 +71,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="flex-content">
           <img src="images/producer2.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -114,7 +113,6 @@
         </div>
       </section>
       </div>
-    </div>
     </div>
     </main>
 
