--- a/producers.html
+++ b/producers.html
@@ -67,7 +67,7 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
-            <a href="producer-profile.html">Profile</a>
+            <a href="producer-profile.html" class="button1">Profile</a>
         </div>
       </section>
 
@@ -81,7 +81,7 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
-            <a href="producer-profile.html">Profile</a>
+            <a href="producer-profile.html" class="button1">Profile</a>
         </div>
       </section>
 
@@ -95,7 +95,7 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
-            <a href="producer-profile.html">Profile</a>
+            <a href="producer-profile.html" class="button1">Profile</a>
           </div>
       </section>
 
@@ -109,7 +109,7 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
-            <a href="producer-profile.html">Profile</a>
+            <a href="producer-profile.html" class="button1">Profile</a>
         </div>
       </section>
       </div>
