--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
       <section class="index-section3">
         <div class="content-wrap">
          <h3>Pay-per-watch</h3>
-          <p>No monthly charges. Only 2$ per film.</p> 
-            <span style="font-size: 5em;float: right;margin-right: 10%;">
-              <i class="fas fa-film"></i>
-           </span>
+          <p>No monthly charges. Only 2$ per film.</p> <i class="fas fa-film" style="font-size: 5em;float: right; margin-right: 10%;"></i>
         </div>
       </section>
 
