--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
       <section class="index-section3">
         <div class="content-wrap">
-         <h3>Pay-per-watch<i class="fas fa-film" style="font-size: 5em;float: right; margin-right: 10%;"></i></h3>
+          <i class="fas fa-film" style="font-size: 5em;float: right; margin-right: 10%;"></i>
+         <h3>Pay-per-watch</h3>
           <p>No monthly charges. Only 2$ per film. </p>
         </div>
       </section>
