--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <section class="index-section3">
         <div class="content-wrap">
-          <i class="fas fa-film" style="font-size: 5em;float: right; margin-right: 10%;"></i>
+          <i class="fas fa-film"></i>
          <h3>Pay-per-watch</h3>
           <p>No monthly charges. Only 2$ per film. </p>
         </div>
