--- a/producer-profile.html
+++ b/producer-profile.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-    <title>SquareEyes | Name Surname</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/styles.css" rel="stylesheet">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <title>SquareEyes | Producers</title>
+    <meta
+      name="description"
+      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles/styles.css" rel="stylesheet" />
   </head>
-  
+
   <body>
     <header>
-      <nav class="right-menu">
-        <a href="login.html">Sign in</a>
-        <i class="fas fa-search"></i>
-      </nav>
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="films.html">Films</a></li>
-          <li><a href="producers.html">Producers</a></li>
-        </ul>
-      </nav>
+      <div class="content-wrap">
+        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
+          <nav class="right-nav">
+           <ul>
+            <a href="login.html">Sign in</a>
+            <a href="search.html"><i class="fas fa-search"></i></a>
+          </ul>
+          </nav>
+      </div>
+ </header>
 
-    </header>
-   
-    <main>
+  <main>
+    <nav class="navbar">
+      <ul style="margin-left: 59px;">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="films.html">Films</a></li>
+        <li><a href="producers.html" class="active">Producers</a></li>
+      </ul>
+    </nav>
+
+  <a href="producers.html"
+  ><i class="fas fa-chevron-left" style="font-size: 30px"></i
+  ></a>
+
       <section>
         <img src="images/producer1.jpg" alt="Profile picture" class="profile-picture">
         <h1>Name Surname</h1>
