--- a/Create-account.html
+++ b/Create-account.html
@@ -11,11 +11,16 @@
     <link href="styles/styles.css" rel="stylesheet">
   </head>
 
-  <body>
-    <header>
-      <a href="index.html"><img src="images/logo2.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
-      <i class="fas fa-home"></i>
-    </header>
+  <header>
+    <div class="content-wrap">
+      <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo">
+        <nav class="right-nav">
+         <ul>
+          <a href="/index.html"><i class="fas fa-home"></i></a>
+        </ul>
+        </nav>
+    </div>
+  </header>
 
     <main>
         <section>
