--- a/Create-account.html
+++ b/Create-account.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/styles.css" rel="stylesheet">
   </head>
-
+  
+<body>
   <header>
     <div class="content-wrap">
       <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo">
@@ -48,4 +49,5 @@
     <footer>
 
     </footer>
+</body>
 </html>
