--- a/Create-account.html
+++ b/Create-account.html
@@ -8,19 +8,17 @@
     <title>SquareEyes | Create an account</title>
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/account.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
   </head>
 
 <body>
-  <header>
-    <div class="content-wrap">
-      <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo">
+  <header class="small-header">
+      <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
         <nav class="right-nav">
          <ul>
           <a href="/index.html"><i class="fas fa-home"></i></a>
         </ul>
         </nav>
-    </div>
   </header>
 
     <main>
