--- a/Create-account.html
+++ b/Create-account.html
@@ -13,15 +13,18 @@
 
 <body>
   <header class="small-header">
+    <div class="small-header-wrap">
       <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
         <nav class="right-nav">
          <ul>
           <a href="/index.html"><i class="fas fa-home"></i></a>
         </ul>
         </nav>
-  </header>
+  </div>
+</header>
 
     <main>
+        
         <section>
             <h1>Create an account</h1>
                <p>Choose your type of account</p>
