--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -12,18 +12,16 @@
   </head>
 
   <body>
-    <header>
-        <header>
-            <div class="content-wrap">
-              <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo">
-                <nav class="right-nav">
-                 <ul>
-                  <a href="/index.html"><i class="fas fa-home"></i></a>
-                </ul>
-                </nav>
-            </div>
-          </header>
-    </header>
+    <header class="small-header">
+      <div class="small-header-wrap">
+        <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+          <nav class="right-nav">
+           <ul>
+            <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+          </ul>
+          </nav>
+    </div>
+  </header>
 
     <main>
         <form action="submit.php" method="GET">
