--- a/Create-account.html
+++ b/Create-account.html
@@ -17,14 +17,14 @@
       <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
         <nav class="right-nav">
          <ul>
-          <a href="/index.html"><i class="fas fa-home"></i></a>
+          <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
         </ul>
         </nav>
   </div>
 </header>
 
     <main>
-        
+
         <section>
             <h1>Create an account</h1>
                <p>Choose your type of account</p>
