--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -14,7 +14,7 @@
   <body>
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+        <a href="/index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
             <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
@@ -37,10 +37,10 @@
             <input type="text" name="password" class="form__input"required>
             <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
         </fieldset>
-        <input type="submit" value="next">
+        <button type="submit"><i class="fas fa-arrow-circle-right" style="color: #E6B33E; font-size: 2px;"></i></button>
      </form>
     <a href="../create-account-pro/create-account-pro2.html">next</a>
-    <i class="fas fa-arrow-circle-right fa-4x" style="color: #E6B33E;"></i>
+    
     </body>
     </main>
 
