--- a/Create-account.html
+++ b/Create-account.html
@@ -30,7 +30,7 @@
                <p>Choose your type of account</p>
           </section>
 
-          <section class="make-account-section">
+          <section class="create-account-section">
             <h2>Producer</h2>
              <p>Upload your work</p>
              <p>Profit per view</p>
@@ -38,7 +38,7 @@
               <a href="create-account-pro/create-account-pro1.html" class="button1">Make producer account</a>
           </section>
 
-          <section class="make-account-section">
+          <section class="create-account-section">
             <h2>Watcher</h2>
              <p>Enjoy independent films</p>
              <p>Add credit card for easy payment</p>
