--- a/Create-account.html
+++ b/Create-account.html
@@ -30,6 +30,7 @@
                <p>Choose your type of account</p>
           </section>
 
+          <div class="flex-content">
           <section class="create-account-section">
             <h2>Producer</h2>
              <p>Upload your work</p>
@@ -45,6 +46,7 @@
              <p>Get regular newsletters</p>
               <a href="create-account-watcher/create-account-watcher1.html" class="button1">Make watcher account</a>
           </section>
+        </div>
     </main>
 
     <footer>
