--- a/producers.html
+++ b/producers.html
@@ -56,7 +56,7 @@
       </div>
       </section>
    
-      <section class="flex-content">
+      <section class="grid-content">
           <img src="images/producer1.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -71,7 +71,7 @@
         </div>
       </section>
 
-      <section class="flex-content">
+      <section class="grid-content">
           <img src="images/producer2.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -85,7 +85,7 @@
         </div>
       </section>
 
-      <section class="flex-content">
+      <section class="grid-content">
           <img src="images/producer3.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
@@ -99,7 +99,7 @@
           </div>
       </section>
 
-      <section class="flex-content">
+      <section class="grid-content">
           <img src="images/producer4.jpg" class="producer"/>
           <div class= "producer-col">
             <h2>Name Surename</h2>
