--- a/Create-account.html
+++ b/Create-account.html
@@ -35,7 +35,9 @@
              <p>Upload your work</p>
              <p>Profit per view</p>
              <p>Get your own profile page</p>
+             <div class="create-account-button">
               <a href="create-account-pro/create-account-pro1.html" class="button1">Make producer account</a>
+            </div>
           </section>
 
           <section class="create-account-section">
@@ -43,9 +45,11 @@
              <p>Enjoy independent films</p>
              <p>Add credit card for easy payment</p>
              <p>Get regular newsletters</p>
+             <div class="create-account-button">
               <a href="create-account-watcher/create-account-watcher1.html" class="button1">Make watcher account</a>
-          </section>
-        </div>
+          </div>
+        </section>
+    </div>
     </main>
 
     <footer>
