--- a/producers.html
+++ b/producers.html
@@ -81,8 +81,10 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
+            <div class="profile-button"></div>
             <a href="producer-profile.html" class="button1">Profile</a>
         </div>
+      </div>
       </section>
 
       <section class="grid-content">
@@ -95,7 +97,9 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
+            <div class="profile-button">
             <a href="producer-profile.html" class="button1">Profile</a>
+          </div>
           </div>
       </section>
 
@@ -109,8 +113,10 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
+            <div class="profile-button">
             <a href="producer-profile.html" class="button1">Profile</a>
         </div>
+          </div>
       </section>
       </div>
     </div>
