--- a/producers.html
+++ b/producers.html
@@ -67,8 +67,10 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
+            <div class="profile-button">
             <a href="producer-profile.html" class="button1">Profile</a>
         </div>
+          </div>
       </section>
 
       <section class="grid-content">
@@ -81,7 +83,7 @@
               quae ab illo inventore veritatis et quasi ropeior architecto
               beatae vitae dicta sunt.
             </p>
-            <div class="profile-button"></div>
+            <div class="profile-button">
             <a href="producer-profile.html" class="button1">Profile</a>
         </div>
       </div>
