--- a/Create-account.html
+++ b/Create-account.html
@@ -25,7 +25,7 @@
 
     <main>
         <section class="h1-subtext">
-            <h1>Create an account</h1>
+            <h1 class="h1-create-account">Create an account</h1>
                <p>Choose your type of account</p>
           </section>
 
