--- a/producers.html
+++ b/producers.html
@@ -46,7 +46,7 @@
   </nav>
          <section class="heading-content">
         <div class="content-wrap">
-          <h1>Producers</h1>
+          <h1 class="h1-producers">Producers</h1>
           <p class="h1-subtext">
             Explore independent producers and watch their high quality films
           </p>
