--- a/Create-account.html
+++ b/Create-account.html
@@ -32,19 +32,19 @@
           <div class="flex-content">
           <section class="create-account-section">
             <h2>Producer</h2>
-             <p>Upload your work</p>
-             <p>Profit per view</p>
-             <p>Get your own profile page</p>
-             <div class="create-account-button">
+            <i class="far fa-check-circle"></i> <p>Upload your work</p>
+            <i class="far fa-check-circle"></i> <p>Profit per view</p>
+            <i class="far fa-check-circle"></i> <p>Get your own profile page</p>
+            <div class="create-account-button">
               <a href="create-account-pro/create-account-pro1.html" class="button1">Make producer account</a>
             </div>
           </section>
 
           <section class="create-account-section">
             <h2>Watcher</h2>
-             <p>Enjoy independent films</p>
-             <p>Add credit card for easy payment</p>
-             <p>Get regular newsletters</p>
+            <i class="far fa-check-circle"></i> <p>Enjoy independent films</p>
+            <i class="far fa-check-circle"></i> <p>Add credit card for easy payment</p>
+            <i class="far fa-check-circle"></i> <p>Get regular newsletters</p>
              <div class="create-account-button">
               <a href="create-account-watcher/create-account-watcher1.html" class="button1">Make watcher account</a>
           </div>
