--- a/Create-account.html
+++ b/Create-account.html
@@ -32,7 +32,7 @@
           <div class="flex-content">
           <section class="create-account-section">
             <h2>Producer</h2>
-            <i class="far fa-check-circle"></i> <p>Upload your work</p>
+            <p><div class="check-icon"><i class="far fa-check-circle"></i></div> Upload your work</p>
             <i class="far fa-check-circle"></i> <p>Profit per view</p>
             <i class="far fa-check-circle"></i> <p>Get your own profile page</p>
             <div class="create-account-button">
